# aish

./: AGENTS.md  CONTEXT_ENGINEERING.md  Cargo.toml  EXAMPLES.md  INTEGRATION_TESTS.md  README.md  TODO.codex  aish_codex.md
crates/aish/: Cargo.toml
crates/aish/src/: main.rs
crates/aish_core/: Cargo.toml
crates/aish_core/src/: config.rs
crates/aishd/: Cargo.toml
crates/aishd/src/: log_index.rs  main.rs
scripts/: benchmark_fib_providers.py  install.sh  relevance_eval.py  relevance_eval_cases.json  run_integration_tests.sh  test_context_engineering_workflow.sh  test_mcp_mock_integration.sh  test_mcp_web_search.sh  test_openai_compat_rig_integration.sh  test_resume_workflow.sh  test_retrieval_ledger_http.sh  tmux_diagnostic.sh
