[package]
name = "aish"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aish_core = { path = "../aish_core" }
