[package]
name = "aishd"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
rusqlite = { workspace = true }
aish_core = { path = "../aish_core" }
